--- a/style.css
+++ b/style.css
@@ -3,18 +3,16 @@
 
 body {
 	background-color: black;
-	color: red;
 }
 
 .stations {
 	height: 200px;
 	width: 200px;
 	background-color: white;
-	margin: 50px;
-	float: left;
 	border-radius: 50%;
 	text-align: center;
 	padding: auto;
+	margin: 0 auto;
 
 }
 
@@ -26,10 +24,6 @@ body {
 
 h2 {
 	font-family: "Baloo Bhaina";
-}
-
-h3 {
-	margin-top: 100px;
 }
 
 .row {
@@ -45,5 +39,11 @@ h3 {
 	padding: 5px;
 	text-align: center;
 }
+
+#station1 {
+	color: red;
+}
+
+
 
 /*wysrodkowanie kolek wzgledem napisow*/
