--- a/style.css
+++ b/style.css
@@ -2,48 +2,58 @@
 @import url(http://fonts.googleapis.com/css?family=Baloo+Bhaina);
 
 body {
-	background-color: black;
+background-color: black;
 }
 
 .stations {
-	height: 200px;
-	width: 200px;
-	background-color: white;
-	border-radius: 50%;
-	text-align: center;
-	padding: auto;
-	margin: 0 auto;
+height: 200px;
+width: 200px;
+background-color: white;
+border-radius: 50%;
+text-align: center;
+padding: auto;
+margin: 0 auto;
 
 }
 
 .center {
-	float: none;
-	margin-left: auto;
-	margin-right: auto;
+float: none;
+margin-left: auto;
+margin-right: auto;
 }
 
 h2 {
-	font-family: "Baloo Bhaina";
+font-family: "Baloo Bhaina";
 }
 
 .row {
-	position: relative;
-  	margin: 0 auto;
+position: relative;
+  margin: 0 auto;
 }
 
 .col-md-4 {
-	text-align: center;
+text-align: center;
 }
 
 .col-md-4 h2 {
-	padding: 5px;
-	text-align: center;
+padding: 5px;
+text-align: center;
 }
 
 #station1 {
-	color: red;
+color: red;
 }
-
-
-
-/*wysrodkowanie kolek wzgledem napisow*/
+.pop-title {
+  display: none;
+}
+.pop-content {
+  display: none;
+}
+.popover-title {
+    color: blue;
+    font-size: 16px;
+}
+.popover-content {
+    color: red;
+    font-size: 14px;
+}
